@@ -6,7 +6,7 @@ use warnings;
 use Error::Pure qw(err);
 use List::Util 1.33 qw(none);
 use Mo qw(build is);
-use Mo::utils qw(check_bool check_number);
+use Mo::utils qw(check_array check_bool check_number);
 use Mo::utils::CSS qw(check_css_class);
 use Readonly;
 
@@ -56,6 +56,25 @@ sub BUILD {
 	}
 	if (none { $self->{'data_type'} eq $_ } @DATA_TYPES) {
 		err "Parameter 'data_type' has bad value.";
+	}
+
+	# Check data based on type.
+	check_array($self, 'data');
+	foreach my $data_item (@{$self->{'data'}}) {
+		# Plain mode
+		if ($self->{'data_type'} eq 'plain') {
+			if (ref $data_item ne '') {
+				err "Parameter 'data' in 'plain' mode must contain ".
+					'reference to array with scalars.';
+			}
+		# Tags mode.
+		} else {
+			if (ref $data_item ne 'ARRAY') {
+				err "Parameter 'data' in 'tags' mode must contain ".
+					"reference to array with references ".
+					'to array with Tags structure.';
+			}
+		}
 	}
 
 	# Check CSS class.
