@@ -1,6 +1,7 @@
 0.10
  - Add DESCRIPTION section to Element doc.
  - Add check for CSS class in Input, Option and Select.
+ - Add check for data in Option.
  - Add default value for boolean values in Input.
  - Add doc for Input.
  - Add tests for Input.
